[package]
name = "klave"
version = "0.1.2"
authors = [
    "Jérémie Labbé <jeremie@secretarium.org>",
    "Étienne Bossé <etienne@secretarium.org>",
    "Florian Guitton <florian@secretarium.org>",
]
license = "MIT"
edition = "2021"
repository = "https://github.com/klave-network/platform.git"
homepage = "https://klave.com/"
documentation = "https://docs.klave.com/sdk/latest"
readme = "README.md"
resolver = "2"
description = "A Rust SDK for the Klave network."

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
serde_json = "1.0.117"
serde = { version = "1.0.217", features = ["derive"] }
component = "0.1.1"
http = "1.2.0"
anyhow = "1.0.95"
base64 = "0.22.1"

[package.metadata.component]
package = "component:klave-sdk"

[package.metadata.component.target.dependencies]
"klave:sdk" = { path = "./wit/sdk" }

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
