[package]
name = "klave"
version = "0.3.0"
authors = [
    "Jérémie Labbé <jeremie@secretarium.org>",
    "Étienne Bossé <etienne@secretarium.org>",
    "Florian Guitton <florian@secretarium.org>",
    "Jean-Jacques Lafay <jean-jacques@secretarium.org>",
]
license = "MIT"
edition = "2021"
repository = "https://github.com/klave-network/platform.git"
homepage = "https://klave.com/"
documentation = "https://docs.klave.com/sdk/latest"
readme = "README.md"
resolver = "2"
description = "A Rust SDK for the Klave platform."

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
serde_json = "1.0.140"
serde = { version = "1.0.140", features = ["derive"] }
http = "1.2.0"
base64 = "0.22.1"

[package.metadata.component]
package = "component:klave-sdk"

[package.metadata.component.target.dependencies]
"klave:sdk" = { path = "./wit/sdk" }
