[package]
name = "klave"
version = "0.5.0"
authors = [ "Jérémie Labbé <jeremie@secretarium.org>", "Étienne Bossé <etienne@secretarium.org>", "Florian Guitton <florian@secretarium.org>", "Jean-Jacques Lafay <jean-jacques@secretarium.org>" ]
license = "MIT"
edition = "2021"
repository = "https://github.com/klave-network/platform.git"
homepage = "https://klave.com/"
documentation = "https://docs.klave.com/sdk/latest"
readme = "README.md"
resolver = "2"
description = "A Rust SDK for the Klave platform."

[package.metadata]
[package.metadata.component]
package = "component:klave-sdk"

[package.metadata.component.target]
[package.metadata.component.target.dependencies]
[package.metadata.component.target.dependencies."klave:sdk"]
path = "./wit/sdk"

[dependencies]
serde_json = "1.0.145"
http = "1.3.1"
base64 = "0.22.1"

[dependencies.wit-bindgen-rt]
version = "0.44.0"
features = [ "bitflags" ]

[dependencies.serde]
version = "1.0.228"
features = [ "derive" ]